--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         and scalable code for the business. I am also an active learner who always likes to learn and share my knowledge with others.
                         Most importantly I am very good at collaborating and communicating with others, especially in Agile/Scrum teams.
                     </p>
-                    <a href="./CV_Dunwang Lin (Evan).docx" download>Download CV</a>
+                    <a href="./CV.pdf" download>Download CV</a>
                 </div>
 
             </div>
